@@ -5,6 +5,7 @@ import org.amshove.natls.testlifecycle.EmptyProjectTest;
 import org.junit.jupiter.api.Test;
 
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 
 import static org.assertj.core.api.AssertionsForInterfaceTypes.assertThat;
 
@@ -54,8 +55,8 @@ class InputStructureEndpointShould extends EmptyProjectTest
 			0
 		);
 
-		assertThat(structure.getElements().get(0).getKind()).isEqualTo(InputStructureElementKind.OPERAND);
-		assertThat(((InputOperandElement) structure.getElements().get(0)).getType()).isEqualTo("literal");
+		var operand = assertHasOperand(structure, "Hi");
+		assertThat(operand.getType()).isEqualTo("literal");
 	}
 
 	@Test
@@ -72,8 +73,8 @@ class InputStructureEndpointShould extends EmptyProjectTest
 			0
 		);
 
-		assertThat(structure.getElements().get(0).getKind()).isEqualTo(InputStructureElementKind.OPERAND);
-		assertThat(((InputOperandElement) structure.getElements().get(0)).getType()).isEqualTo("reference");
+		var operand = assertHasOperand(structure, "#VAR");
+		assertThat(operand.getType()).isEqualTo("reference");
 	}
 
 	@Test
@@ -87,8 +88,9 @@ class InputStructureEndpointShould extends EmptyProjectTest
 				   END
 			""", 0);
 
-		assertThat(structure.getElements().get(0).getKind()).isEqualTo(InputStructureElementKind.COLUMN_POSITION);
-		assertThat(((InputColumnPositionElement) structure.getElements().get(0)).getColumn()).isEqualTo(5);
+		assertHasKind(structure, InputStructureElementKind.COLUMN_POSITION);
+		assertThat(structure.getElements().getFirst().getKind()).isEqualTo(InputStructureElementKind.COLUMN_POSITION);
+		assertThat(((InputColumnPositionElement) structure.getElements().getFirst()).getColumn()).isEqualTo(5);
 	}
 
 	@Test
@@ -102,8 +104,9 @@ class InputStructureEndpointShould extends EmptyProjectTest
 				   END
 			""", 0);
 
-		assertThat(structure.getElements().get(0).getKind()).isEqualTo(InputStructureElementKind.SPACES);
-		assertThat(((InputSpaceElement) structure.getElements().get(0)).getSpaces()).isEqualTo(5);
+		assertHasKind(structure, InputStructureElementKind.SPACES);
+		assertThat(structure.getElements().getFirst().getKind()).isEqualTo(InputStructureElementKind.SPACES);
+		assertThat(((InputSpaceElement) structure.getElements().getFirst()).getSpaces()).isEqualTo(5);
 	}
 
 	@Test
@@ -117,7 +120,7 @@ class InputStructureEndpointShould extends EmptyProjectTest
 				   END
 			""", 0);
 
-		assertThat(structure.getElements().get(1).getKind()).isEqualTo(InputStructureElementKind.NEW_LINE);
+		assertHasKind(structure, InputStructureElementKind.NEW_LINE);
 	}
 
 	@Test
@@ -131,8 +134,8 @@ class InputStructureEndpointShould extends EmptyProjectTest
 				   END
 			""", 0);
 
-		assertThat(structure.getElements().get(0).getKind()).isEqualTo(InputStructureElementKind.OPERAND);
-		assertThat(((InputOperandElement) structure.getElements().get(0)).getLength()).isEqualTo(5);
+		var operand = assertHasOperand(structure, "*****");
+		assertThat(operand.getLength()).isEqualTo(5);
 	}
 
 	@Test
@@ -145,8 +148,56 @@ class InputStructureEndpointShould extends EmptyProjectTest
                END
             """, 0);
 
-		assertThat(structure.getElements().get(0).getKind()).isEqualTo(InputStructureElementKind.OPERAND);
-		assertThat(((InputOperandElement) structure.getElements().get(0)).getAttributes()).anyMatch(a -> a.getKind().equalsIgnoreCase("AD") && a.getValue().equalsIgnoreCase("I"));
+		assertHasOperand(structure, "Hi", withAttribute("AD", "I"));
+	}
+
+	@Test
+	void inheritAttributesFromStatementLevel()
+	{
+		var structure = callEndpoint("""
+               DEFINE DATA PARAMETER
+               1 #VAR (A5)
+               END-DEFINE
+               INPUT (AD=I) 'Hi' #VAR
+               END
+            """, 0);
+
+		assertHasOperand(structure, "Hi", withAttribute("AD", "I"));
+		assertHasOperand(structure, "#VAR", withAttribute("AD", "I"));
+	}
+
+	@Test
+	void inheritAttributesFromStatementLevelAndAddOwnAttributes()
+	{
+		var structure = callEndpoint("""
+               DEFINE DATA PARAMETER
+               1 #VAR (A5)
+               END-DEFINE
+               INPUT (AD=I) 'Hi' #VAR (AL=5)
+               END
+            """, 0);
+
+		assertHasOperand(structure, "Hi", withAttribute("AD", "I"));
+		assertHasOperand(structure, "#VAR", withAttribute("AD", "I"), withAttribute("AL", "5"));
+	}
+
+	@Test
+	void overrideStatementLevelAttributes()
+	{
+		var structure = callEndpoint("""
+               DEFINE DATA PARAMETER
+               1 #VAR (A5)
+               END-DEFINE
+               INPUT (AD=I AL=5) 'Hi' #VAR (AL=10 AD=I)
+               END
+            """, 0);
+
+		assertHasOperand(structure, "Hi", withAttribute("AL", "5"), withAttribute("AD", "I"));
+
+		var operand = assertHasOperand(structure, "#VAR", withAttribute("AL", "10"), withAttribute("AD", "I"));
+		assertThat(operand.getAttributes())
+			.as("Operand should only have two attribute because of overrides, but got more")
+			.hasSize(2);
 	}
 
 	@Test
@@ -160,9 +211,8 @@ class InputStructureEndpointShould extends EmptyProjectTest
                END
             """, 0);
 
-		assertThat(structure.getElements().get(0).getKind()).isEqualTo(InputStructureElementKind.OPERAND);
-		assertThat(((InputOperandElement) structure.getElements().get(0)).getAttributes()).anyMatch(a -> a.getKind().equalsIgnoreCase("AL") && a.getValue().equalsIgnoreCase("5"));
-		assertThat(((InputOperandElement) structure.getElements().get(0)).getLength()).isEqualTo(5);
+		var operand = assertHasOperand(structure, "#LONG");
+		assertThat(operand.getLength()).isEqualTo(5);
 	}
 
 	@Test
@@ -176,9 +226,8 @@ class InputStructureEndpointShould extends EmptyProjectTest
                END
             """, 0);
 
-		assertThat(structure.getElements().get(0).getKind()).isEqualTo(InputStructureElementKind.OPERAND);
-		assertThat(((InputOperandElement) structure.getElements().get(0)).getAttributes()).anyMatch(a -> a.getKind().equalsIgnoreCase("NL") && a.getValue().equalsIgnoreCase("4,2"));
-		assertThat(((InputOperandElement) structure.getElements().get(0)).getLength()).isEqualTo(7); // 4 in front, 2 after plus decimal separator
+		var operand = assertHasOperand(structure, "#LONG", withAttribute("NL", "4,2"));
+		assertThat(operand.getLength()).isEqualTo(7); // 4 in front, 2 after plus decimal separator
 	}
 
 	@Test
@@ -192,9 +241,8 @@ class InputStructureEndpointShould extends EmptyProjectTest
                END
             """, 0);
 
-		assertThat(structure.getElements().get(0).getKind()).isEqualTo(InputStructureElementKind.OPERAND);
-		assertThat(((InputOperandElement) structure.getElements().get(0)).getAttributes()).anyMatch(a -> a.getKind().equalsIgnoreCase("NL") && a.getValue().equalsIgnoreCase("4,2"));
-		assertThat(((InputOperandElement) structure.getElements().get(0)).getLength()).isEqualTo(8); // 4 in front, 2 after plus decimal separator, plus sign
+		var operand = assertHasOperand(structure, "#LONG", withAttribute("NL", "4,2"), withAttribute("SG", "ON"));
+		assertThat(operand.getLength()).isEqualTo(8); // 4 in front, 2 after plus decimal separator, plus sign
 	}
 
 	@Test
@@ -208,9 +256,55 @@ class InputStructureEndpointShould extends EmptyProjectTest
                END
             """, 0);
 
-		assertThat(structure.getElements().get(0).getKind()).isEqualTo(InputStructureElementKind.OPERAND);
-		assertThat(((InputOperandElement) structure.getElements().get(0)).getAttributes()).anyMatch(a -> a.getKind().equalsIgnoreCase("NL") && a.getValue().equalsIgnoreCase("4,2"));
-		assertThat(((InputOperandElement) structure.getElements().get(0)).getLength()).isEqualTo(7); // 4 in front, 2 after plus decimal separator
+		var operand = assertHasOperand(structure, "#LONG", withAttribute("NL", "4,2"), withAttribute("SG", "OFF"));
+		assertThat(operand.getLength()).isEqualTo(7); // 4 in front, 2 after plus decimal separator
+	}
+
+	private InputOperandElement assertHasOperand(InputStructureResponse structure, String value, AttributeAssertion... attributeAssertions)
+	{
+		InputOperandElement operand = null;
+		for (var element : structure.getElements().stream().filter(InputOperandElement.class::isInstance).map(InputOperandElement.class::cast).toList())
+		{
+			if (element.getKind().equalsIgnoreCase(InputStructureElementKind.OPERAND) && element.getOperand().equals(value))
+			{
+				operand = element;
+				break;
+			}
+		}
+
+		assertThat(operand)
+			.as("Operand with value <%s> and kind <%s> not found in%n%s", value, InputStructureElementKind.OPERAND, formatElements(structure))
+			.isNotNull();
+
+		assertAttributes(operand, attributeAssertions);
+
+		return operand;
+	}
+
+	private void assertAttributes(InputOperandElement operand, AttributeAssertion[] attributeAssertions)
+	{
+		for (var attributeAssertion : attributeAssertions)
+		{
+			assertThat(operand.getAttributes())
+				.as(
+					"Attribute with kind <%s> and value <%s> not found in%n%s", attributeAssertion.kind, attributeAssertion.value, operand.getAttributes().stream().map(InputAttributeElement::toString).collect(
+						Collectors.joining("\n")
+					)
+				)
+				.anyMatch(a -> a.getValue().equals(attributeAssertion.value) && a.getKind().equals(attributeAssertion.kind));
+		}
+	}
+
+	private void assertHasKind(InputStructureResponse structure, String kind)
+	{
+		assertThat(structure.getElements())
+			.as("Element with kind <%s> not found in %n%s", kind, formatElements(structure))
+			.anyMatch(e -> e.getKind().equals(kind));
+	}
+
+	private AttributeAssertion withAttribute(String name, String value)
+	{
+		return new AttributeAssertion(name, value);
 	}
 
 	private InputStructureResponse callEndpoint(String source, int inputIndex)
@@ -229,4 +323,14 @@ class InputStructureEndpointShould extends EmptyProjectTest
 			throw new RuntimeException(e);
 		}
 	}
+
+	private String formatElements(InputStructureResponse structure)
+	{
+		return structure.getElements().stream().map(e -> "%s -> %s".formatted(e.getKind(), e)).collect(
+			Collectors.joining("\n")
+		);
+	}
+
+	record AttributeAssertion(String kind, String value)
+	{}
 }
